PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? ????, PHP 7.4.0beta1

- Core:
  . Fixed bug #78212 (Segfault in built-in webserver). (cmb)

- Libxml:
  . Fixed bug #78279 (libxml_disable_entity_loader settings is shared between
    requests (cgi-fcgi)). (Nikita)

- Opcache:
  . Fixed bug #78271 (Invalid result of if-else). (Nikita)

- Recode:
  . Unbundled the recode extension. (cmb)

- Standard:
  . Fixed bug #78282 (atime and mtime mismatch). (cmb)

11 Jul 2019, PHP 7.4.0alpha3

- Core:
  . Fixed bug #78239 (Deprecation notice during string conversion converted to
    exception hangs). (Nikita)
  . Implemented FR #77230 (Support custom CFLAGS and LDFLAGS from environment).
    (cmb)

- Date:
  . Updated timelib to 2018.02. (Derick)

- Fileinfo:
  . Fixed bug #78183 (finfo_file shows wrong mime-type for .tga file).
   (Anatol)

- LiteSpeed:
  . Updated to LiteSpeed SAPI V7.4.3 (increased response header count limit from
    100 to 1000, added crash handler to cleanly shutdown PHP request, added
    CloudLinux mod_lsapi mode). (George Wang)
  . Fixed bug #76058 (After "POST data can't be buffered", using php://input
    makes huge tmp files). (George Wang)

- Openssl:
  . Fixed bug #78231 (Segmentation fault upon stream_socket_accept of exported
    socket-to-stream). (Nikita)

- Opcache:
  . Fixed #78202 (Opcache stats for cache hits are capped at 32bit NUM). (cmb)

- mysqlnd:
  . Fixed #60594 (mysqlnd exposes 160 lines of stats in phpinfo). (PeeHaa)

- PDO:
  . Implemented FR #78033 (PDO - support username & password specified in
    DSN). (sjon)

- PDO_Sqlite:
  . Fixed #78192 (SegFault when reuse statement after schema has changed).
    (Vincent Quatrevieux)

- Reflection:
  . Fixed bug #78263 (\ReflectionReference::fromArrayElement() returns null
    while item is a reference). (Nikita)

- Standard: